Removing errors and starting clean up & upgrade