@@ -25,8 +25,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import lombok.extern.slf4j.Slf4j;
 
 import org.apache.fop.fo.Constants;
 import org.apache.fop.fo.FObj;
@@ -34,21 +33,20 @@ import org.apache.fop.layoutmgr.AbstractBreaker.PageBreakPosition;
 import org.apache.fop.traits.MinOptMax;
 import org.apache.fop.util.ListUtil;
 
+@Slf4j
 class PageBreakingAlgorithm extends BreakingAlgorithm {
 
-    /** the logger for the class */
-    private static Log log = LogFactory.getLog(PageBreakingAlgorithm.class);
-
-    private LayoutManager topLevelLM;
-    private PageProvider pageProvider;
-    private PageBreakingLayoutListener layoutListener;
+    private final LayoutManager topLevelLM;
+    private final PageProvider pageProvider;
+    private final PageBreakingLayoutListener layoutListener;
     /** List of PageBreakPosition elements. */
     private LinkedList pageBreaks = null;
 
-    /** Footnotes which are cited between the currently considered active node (previous
-     * break) and the current considered break. Its type is
-     * List&lt;List&lt;KnuthElement&gt;&gt;, it contains the sequences of KnuthElement
-     * representing the footnotes bodies.
+    /**
+     * Footnotes which are cited between the currently considered active node
+     * (previous break) and the current considered break. Its type is
+     * List&lt;List&lt;KnuthElement&gt;&gt;, it contains the sequences of
+     * KnuthElement representing the footnotes bodies.
      */
     private List footnotesList = null;
     /** Cumulated bpd of unhandled footnotes. */
@@ -56,16 +54,20 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
     /** Length of all the footnotes which will be put on the current page. */
     private int totalFootnotesLength = 0;
     /**
-     * Length of all the footnotes which have already been inserted, up to the currently
-     * considered element. That is, footnotes from the currently considered page plus
-     * footnotes from its preceding pages.
+     * Length of all the footnotes which have already been inserted, up to the
+     * currently considered element. That is, footnotes from the currently
+     * considered page plus footnotes from its preceding pages.
      */
     private int insertedFootnotesLength = 0;
 
-    /** True if footnote citations have been met since the beginning of the page sequence. */
+    /**
+     * True if footnote citations have been met since the beginning of the page
+     * sequence.
+     */
     private boolean footnotesPending = false;
     /**
-     * True if the elements met after the previous break point contain footnote citations.
+     * True if the elements met after the previous break point contain footnote
+     * citations.
      */
     private boolean newFootnotes = false;
     /**
@@ -74,13 +76,17 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
     private int firstNewFootnoteIndex = 0;
     /** Index of the last footnote inserted on the current page. */
     private int footnoteListIndex = 0;
-    /** Index of the last element of the last footnote inserted on the current page. */
+    /**
+     * Index of the last element of the last footnote inserted on the current
+     * page.
+     */
     private int footnoteElementIndex = -1;
 
     // demerits for a page break that splits a footnote
-    private int splitFootnoteDemerits = 5000;
-    // demerits for a page break that defers a whole footnote to the following page
-    private int deferredFootnoteDemerits = 10000;
+    private final int splitFootnoteDemerits = 5000;
+    // demerits for a page break that defers a whole footnote to the following
+    // page
+    private final int deferredFootnoteDemerits = 10000;
     private MinOptMax footnoteSeparatorLength = null;
 
     // the method noBreakBetween(int, int) uses these variables
@@ -90,40 +96,40 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
     private int storedBreakIndex = -1;
     private boolean storedValue = false;
 
-    //Controls whether overflows should be warned about or not
+    // Controls whether overflows should be warned about or not
     private boolean autoHeight = false;
 
-    //Controls whether a single part should be forced if possible (ex. block-container)
+    // Controls whether a single part should be forced if possible (ex.
+    // block-container)
     private boolean favorSinglePart = false;
 
     private int ipdDifference;
     private KnuthNode bestNodeForIPDChange;
 
-    //Used to keep track of switches in keep-context
+    // Used to keep track of switches in keep-context
     private int currentKeepContext = Constants.EN_AUTO;
     private KnuthNode lastBeforeKeepContextSwitch;
 
-
-    public PageBreakingAlgorithm(LayoutManager topLevelLM,
-                                 PageProvider pageProvider,
-                                 PageBreakingLayoutListener layoutListener,
-                                 int alignment, int alignmentLast,
-                                 MinOptMax footnoteSeparatorLength,
-                                 boolean partOverflowRecovery, boolean autoHeight,
-                                 boolean favorSinglePart) {
+    public PageBreakingAlgorithm(final LayoutManager topLevelLM,
+            final PageProvider pageProvider,
+            final PageBreakingLayoutListener layoutListener,
+            final int alignment, final int alignmentLast,
+            final MinOptMax footnoteSeparatorLength,
+            final boolean partOverflowRecovery, final boolean autoHeight,
+            final boolean favorSinglePart) {
         super(alignment, alignmentLast, true, partOverflowRecovery, 0);
         this.topLevelLM = topLevelLM;
         this.pageProvider = pageProvider;
         this.layoutListener = layoutListener;
-        best = new BestPageRecords();
+        this.best = new BestPageRecords();
         this.footnoteSeparatorLength = footnoteSeparatorLength;
         this.autoHeight = autoHeight;
         this.favorSinglePart = favorSinglePart;
     }
 
     /**
-     * This class represents a feasible breaking point
-     * with extra information about footnotes.
+     * This class represents a feasible breaking point with extra information
+     * about footnotes.
      */
     protected class KnuthPageNode extends KnuthNode {
 
@@ -136,15 +142,17 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
         /** Index of the last inserted element of the last inserted footnote. */
         public int footnoteElementIndex;
 
-        public KnuthPageNode(int position, int line, int fitness,
-                             int totalWidth, int totalStretch, int totalShrink,
-                             int totalFootnotes, int footnoteListIndex, int footnoteElementIndex,
-                             double adjustRatio, int availableShrink, int availableStretch,
-                             int difference, double totalDemerits, KnuthNode previous) {
-            super(position, line, fitness,
-                  totalWidth, totalStretch, totalShrink,
-                  adjustRatio, availableShrink, availableStretch,
-                  difference, totalDemerits, previous);
+        public KnuthPageNode(final int position, final int line,
+                final int fitness, final int totalWidth,
+                final int totalStretch, final int totalShrink,
+                final int totalFootnotes, final int footnoteListIndex,
+                final int footnoteElementIndex, final double adjustRatio,
+                final int availableShrink, final int availableStretch,
+                final int difference, final double totalDemerits,
+                final KnuthNode previous) {
+            super(position, line, fitness, totalWidth, totalStretch,
+                    totalShrink, adjustRatio, availableShrink,
+                    availableStretch, difference, totalDemerits, previous);
             this.totalFootnotes = totalFootnotes;
             this.footnoteListIndex = footnoteListIndex;
             this.footnoteElementIndex = footnoteElementIndex;
@@ -153,78 +161,78 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
     }
 
     /**
-     * this class stores information about how the nodes
-     * which could start a line ending at the current element
+     * this class stores information about how the nodes which could start a
+     * line ending at the current element
      */
     protected class BestPageRecords extends BestRecords {
 
-        private int[] bestFootnotesLength = new int[4];
-        private int[] bestFootnoteListIndex = new int[4];
-        private int[] bestFootnoteElementIndex = new int[4];
+        private final int[] bestFootnotesLength = new int[4];
+        private final int[] bestFootnoteListIndex = new int[4];
+        private final int[] bestFootnoteElementIndex = new int[4];
 
-        public void addRecord(double demerits, KnuthNode node, double adjust,
-                              int availableShrink, int availableStretch,
-                              int difference, int fitness) {
-            super.addRecord(demerits, node, adjust,
-                            availableShrink, availableStretch,
-                            difference, fitness);
-            bestFootnotesLength[fitness] = insertedFootnotesLength;
-            bestFootnoteListIndex[fitness] = footnoteListIndex;
-            bestFootnoteElementIndex[fitness] = footnoteElementIndex;
+        @Override
+        public void addRecord(final double demerits, final KnuthNode node,
+                final double adjust, final int availableShrink,
+                final int availableStretch, final int difference,
+                final int fitness) {
+            super.addRecord(demerits, node, adjust, availableShrink,
+                    availableStretch, difference, fitness);
+            this.bestFootnotesLength[fitness] = PageBreakingAlgorithm.this.insertedFootnotesLength;
+            this.bestFootnoteListIndex[fitness] = PageBreakingAlgorithm.this.footnoteListIndex;
+            this.bestFootnoteElementIndex[fitness] = PageBreakingAlgorithm.this.footnoteElementIndex;
         }
 
-        public int getFootnotesLength(int fitness) {
-            return bestFootnotesLength[fitness];
+        public int getFootnotesLength(final int fitness) {
+            return this.bestFootnotesLength[fitness];
         }
 
-        public int getFootnoteListIndex(int fitness) {
-            return bestFootnoteListIndex[fitness];
+        public int getFootnoteListIndex(final int fitness) {
+            return this.bestFootnoteListIndex[fitness];
         }
 
-        public int getFootnoteElementIndex(int fitness) {
-            return bestFootnoteElementIndex[fitness];
+        public int getFootnoteElementIndex(final int fitness) {
+            return this.bestFootnoteElementIndex[fitness];
         }
     }
 
     /** {@inheritDoc} */
+    @Override
     protected void initialize() {
         super.initialize();
-        insertedFootnotesLength = 0;
-        footnoteListIndex = 0;
-        footnoteElementIndex = -1;
+        this.insertedFootnotesLength = 0;
+        this.footnoteListIndex = 0;
+        this.footnoteElementIndex = -1;
     }
 
     /**
-     * {@inheritDoc}
-     * Overridden to defer a part to the next page, if it
-     * must be kept within one page, but is too large to fit in
-     * the last column.
+     * {@inheritDoc} Overridden to defer a part to the next page, if it must be
+     * kept within one page, but is too large to fit in the last column.
      */
-    protected KnuthNode recoverFromTooLong(KnuthNode lastTooLong) {
+    @Override
+    protected KnuthNode recoverFromTooLong(final KnuthNode lastTooLong) {
 
         if (log.isDebugEnabled()) {
             log.debug("Recovering from too long: " + lastTooLong);
             log.debug("\tlastTooShort = " + getLastTooShort());
-            log.debug("\tlastBeforeKeepContextSwitch = " + lastBeforeKeepContextSwitch);
-            log.debug("\tcurrentKeepContext = " + AbstractBreaker.getBreakClassName(currentKeepContext));
+            log.debug("\tlastBeforeKeepContextSwitch = "
+                    + this.lastBeforeKeepContextSwitch);
+            log.debug("\tcurrentKeepContext = "
+                    + AbstractBreaker
+                    .getBreakClassName(this.currentKeepContext));
         }
 
-        if (lastBeforeKeepContextSwitch == null
-                || currentKeepContext == Constants.EN_AUTO) {
+        if (this.lastBeforeKeepContextSwitch == null
+                || this.currentKeepContext == Constants.EN_AUTO) {
             return super.recoverFromTooLong(lastTooLong);
         }
 
-        KnuthNode node = lastBeforeKeepContextSwitch;
-        lastBeforeKeepContextSwitch = null;
+        KnuthNode node = this.lastBeforeKeepContextSwitch;
+        this.lastBeforeKeepContextSwitch = null;
         // content would overflow, insert empty page/column(s) and try again
-        while (!pageProvider.endPage(node.line - 1)) {
+        while (!this.pageProvider.endPage(node.line - 1)) {
             log.trace("Adding node for empty column");
-            node = createNode(
-                    node.position,
-                    node.line + 1, 1,
-                    0, 0, 0,
-                    0, 0, 0,
-                    0, 0, node);
+            node = createNode(node.position, node.line + 1, 1, 0, 0, 0, 0, 0,
+                    0, 0, 0, node);
         }
         return node;
     }
@@ -232,26 +240,31 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
     /**
      * Compare two KnuthNodes and return the node with the least demerit.
      *
-     * @param node1 The first knuth node.
-     * @param node2 The other knuth node.
+     * @param node1
+     *            The first knuth node.
+     * @param node2
+     *            The other knuth node.
      * @return the node with the least demerit.
      */
-    protected KnuthNode compareNodes(KnuthNode node1, KnuthNode node2) {
+    @Override
+    protected KnuthNode compareNodes(final KnuthNode node1,
+            final KnuthNode node2) {
 
         /* if either node is null, return the other one */
         if (node1 == null || node2 == null) {
-            return (node1 == null) ? node2 : node1;
+            return node1 == null ? node2 : node1;
         }
 
-        /* if either one of the nodes corresponds to a mere column-break,
-         * and the other one corresponds to a page-break, return the page-break node
+        /*
+         * if either one of the nodes corresponds to a mere column-break, and
+         * the other one corresponds to a page-break, return the page-break node
          */
-        if (pageProvider != null) {
-            if (pageProvider.endPage(node1.line - 1)
-                    && !pageProvider.endPage(node2.line - 1)) {
+        if (this.pageProvider != null) {
+            if (this.pageProvider.endPage(node1.line - 1)
+                    && !this.pageProvider.endPage(node2.line - 1)) {
                 return node1;
-            } else if (pageProvider.endPage(node2.line - 1)
-                    && !pageProvider.endPage(node1.line - 1)) {
+            } else if (this.pageProvider.endPage(node2.line - 1)
+                    && !this.pageProvider.endPage(node1.line - 1)) {
                 return node2;
             }
         }
@@ -261,63 +274,73 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
     }
 
     /** {@inheritDoc} */
-    protected KnuthNode createNode(int position, int line, int fitness,
-                                   int totalWidth, int totalStretch, int totalShrink,
-                                   double adjustRatio, int availableShrink, int availableStretch,
-                                   int difference, double totalDemerits, KnuthNode previous) {
-        return new KnuthPageNode(position, line, fitness,
-                                 totalWidth, totalStretch, totalShrink,
-                                 insertedFootnotesLength, footnoteListIndex, footnoteElementIndex,
-                                 adjustRatio, availableShrink, availableStretch,
-                                 difference, totalDemerits, previous);
+    @Override
+    protected KnuthNode createNode(final int position, final int line,
+            final int fitness, final int totalWidth, final int totalStretch,
+            final int totalShrink, final double adjustRatio,
+            final int availableShrink, final int availableStretch,
+            final int difference, final double totalDemerits,
+            final KnuthNode previous) {
+        return new KnuthPageNode(position, line, fitness, totalWidth,
+                totalStretch, totalShrink, this.insertedFootnotesLength,
+                this.footnoteListIndex, this.footnoteElementIndex, adjustRatio,
+                availableShrink, availableStretch, difference, totalDemerits,
+                previous);
     }
 
     /** {@inheritDoc} */
-    protected KnuthNode createNode(int position, int line, int fitness,
-                                   int totalWidth, int totalStretch, int totalShrink) {
-        return new KnuthPageNode(position, line, fitness,
-                                 totalWidth, totalStretch, totalShrink,
-                                 ((BestPageRecords) best).getFootnotesLength(fitness),
-                                 ((BestPageRecords) best).getFootnoteListIndex(fitness),
-                                 ((BestPageRecords) best).getFootnoteElementIndex(fitness),
-                                 best.getAdjust(fitness), best.getAvailableShrink(fitness),
-                                 best.getAvailableStretch(fitness), best.getDifference(fitness),
-                                 best.getDemerits(fitness), best.getNode(fitness));
+    @Override
+    protected KnuthNode createNode(final int position, final int line,
+            final int fitness, final int totalWidth, final int totalStretch,
+            final int totalShrink) {
+        return new KnuthPageNode(position, line, fitness, totalWidth,
+                totalStretch, totalShrink,
+                ((BestPageRecords) this.best).getFootnotesLength(fitness),
+                ((BestPageRecords) this.best).getFootnoteListIndex(fitness),
+                ((BestPageRecords) this.best).getFootnoteElementIndex(fitness),
+                this.best.getAdjust(fitness),
+                this.best.getAvailableShrink(fitness),
+                this.best.getAvailableStretch(fitness),
+                this.best.getDifference(fitness),
+                this.best.getDemerits(fitness), this.best.getNode(fitness));
     }
 
     /**
-     * {@inheritDoc}
-     * Page-breaking specific handling of the given box. Currently it adds the footnotes
-     * cited in the given box to the list of to-be-handled footnotes.
-     * @param box a block-level element possibly containing foonotes citations
+     * {@inheritDoc} Page-breaking specific handling of the given box. Currently
+     * it adds the footnotes cited in the given box to the list of to-be-handled
+     * footnotes.
+     *
+     * @param box
+     *            a block-level element possibly containing foonotes citations
      */
-    protected void handleBox(KnuthBox box) {
+    @Override
+    protected void handleBox(final KnuthBox box) {
         super.handleBox(box);
-        if (box instanceof KnuthBlockBox
-            && ((KnuthBlockBox) box).hasAnchors()) {
+        if (box instanceof KnuthBlockBox && ((KnuthBlockBox) box).hasAnchors()) {
             handleFootnotes(((KnuthBlockBox) box).getElementLists());
-            if (!newFootnotes) {
-                newFootnotes = true;
-                firstNewFootnoteIndex = footnotesList.size() - 1;
+            if (!this.newFootnotes) {
+                this.newFootnotes = true;
+                this.firstNewFootnoteIndex = this.footnotesList.size() - 1;
             }
         }
     }
 
     /**
-     * {@inheritDoc}
-     * Overridden to consider penalties with value {@link KnuthElement#INFINITE}
-     * as legal break-points, if the current keep-context allows this
-     * (a keep-*.within-page="always" constraint still permits column-breaks)
+     * {@inheritDoc} Overridden to consider penalties with value
+     * {@link KnuthElement#INFINITE} as legal break-points, if the current
+     * keep-context allows this (a keep-*.within-page="always" constraint still
+     * permits column-breaks)
      */
-    protected void handlePenaltyAt(KnuthPenalty penalty, int position,
-                                   int allowedBreaks) {
+    @Override
+    protected void handlePenaltyAt(final KnuthPenalty penalty,
+            final int position, final int allowedBreaks) {
         super.handlePenaltyAt(penalty, position, allowedBreaks);
-        /* if the penalty had value INFINITE, default implementation
-         * will not have considered it a legal break, but it could still
-         * be one.
+        /*
+         * if the penalty had value INFINITE, default implementation will not
+         * have considered it a legal break, but it could still be one.
          */
-        if (penalty.getPenalty() == KnuthPenalty.INFINITE) {
-            int breakClass = penalty.getBreakClass();
+        if (penalty.getPenalty() == KnuthElement.INFINITE) {
+            final int breakClass = penalty.getBreakClass();
             if (breakClass == Constants.EN_PAGE
                     || breakClass == Constants.EN_COLUMN) {
                 considerLegalBreak(penalty, position);
@@ -326,91 +349,103 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
     }
 
     /**
-     * Handles the footnotes cited inside a block-level box. Updates footnotesList and the
-     * value of totalFootnotesLength with the lengths of the given footnotes.
-     * @param elementLists list of KnuthElement sequences corresponding to the footnotes
-     * bodies
+     * Handles the footnotes cited inside a block-level box. Updates
+     * footnotesList and the value of totalFootnotesLength with the lengths of
+     * the given footnotes.
+     *
+     * @param elementLists
+     *            list of KnuthElement sequences corresponding to the footnotes
+     *            bodies
      */
-    private void handleFootnotes(List elementLists) {
+    private void handleFootnotes(final List elementLists) {
         // initialization
-        if (!footnotesPending) {
-            footnotesPending = true;
-            footnotesList = new ArrayList();
-            lengthList = new ArrayList();
-            totalFootnotesLength = 0;
+        if (!this.footnotesPending) {
+            this.footnotesPending = true;
+            this.footnotesList = new ArrayList();
+            this.lengthList = new ArrayList();
+            this.totalFootnotesLength = 0;
         }
-        if (!newFootnotes) {
-            newFootnotes = true;
-            firstNewFootnoteIndex = footnotesList.size();
+        if (!this.newFootnotes) {
+            this.newFootnotes = true;
+            this.firstNewFootnoteIndex = this.footnotesList.size();
         }
 
         // compute the total length of the footnotes
-        for (Iterator elementListsIterator = elementLists.iterator();
-                elementListsIterator.hasNext();) {
+        for (final Iterator elementListsIterator = elementLists.iterator(); elementListsIterator
+                .hasNext();) {
             final List noteList = (List) elementListsIterator.next();
 
-            //Space resolution (Note: this does not respect possible stacking constraints
-            //between footnotes!)
+            // Space resolution (Note: this does not respect possible stacking
+            // constraints
+            // between footnotes!)
             SpaceResolver.resolveElementList(noteList);
 
             int noteLength = 0;
-            footnotesList.add(noteList);
-            for (Iterator noteListIterator = noteList.iterator();
-                    noteListIterator.hasNext();) {
-                final KnuthElement element = (KnuthElement) noteListIterator.next();
+            this.footnotesList.add(noteList);
+            for (final Iterator noteListIterator = noteList.iterator(); noteListIterator
+                    .hasNext();) {
+                final KnuthElement element = (KnuthElement) noteListIterator
+                        .next();
                 if (element.isBox() || element.isGlue()) {
                     noteLength += element.getWidth();
                 }
             }
-            int prevLength = (lengthList == null || lengthList.isEmpty())
-                    ? 0
-                    : ((Integer) ListUtil.getLast(lengthList)).intValue();
-            //TODO: replace with Integer.valueOf() once we switch to Java 5
-            lengthList.add(new Integer(prevLength + noteLength));
-            totalFootnotesLength += noteLength;
+            final int prevLength = this.lengthList == null
+                    || this.lengthList.isEmpty() ? 0 : ((Integer) ListUtil
+                            .getLast(this.lengthList)).intValue();
+            // TODO: replace with Integer.valueOf() once we switch to Java 5
+            this.lengthList.add(new Integer(prevLength + noteLength));
+            this.totalFootnotesLength += noteLength;
         }
     }
 
     /** {@inheritDoc} */
-    protected int restartFrom(KnuthNode restartingNode, int currentIndex) {
-        int returnValue = super.restartFrom(restartingNode, currentIndex);
-        newFootnotes = false;
-        if (footnotesPending) {
+    @Override
+    protected int restartFrom(final KnuthNode restartingNode,
+            final int currentIndex) {
+        final int returnValue = super.restartFrom(restartingNode, currentIndex);
+        this.newFootnotes = false;
+        if (this.footnotesPending) {
             // remove from footnotesList the note lists that will be met
             // after the restarting point
             for (int j = currentIndex; j >= restartingNode.position; j--) {
                 final KnuthElement resetElement = getElement(j);
                 if (resetElement instanceof KnuthBlockBox
                         && ((KnuthBlockBox) resetElement).hasAnchors()) {
-                    resetFootnotes(((KnuthBlockBox) resetElement).getElementLists());
+                    resetFootnotes(((KnuthBlockBox) resetElement)
+                            .getElementLists());
                 }
             }
         }
         return returnValue;
     }
 
-    private void resetFootnotes(List elementLists) {
+    private void resetFootnotes(final List elementLists) {
         for (int i = 0; i < elementLists.size(); i++) {
-            /*LinkedList removedList = (LinkedList)*/ListUtil.removeLast(footnotesList);
-            ListUtil.removeLast(lengthList);
+            /* LinkedList removedList = (LinkedList) */ListUtil
+            .removeLast(this.footnotesList);
+            ListUtil.removeLast(this.lengthList);
 
             // update totalFootnotesLength
-            if (!lengthList.isEmpty()) {
-                totalFootnotesLength = ((Integer) ListUtil.getLast(lengthList)).intValue();
+            if (!this.lengthList.isEmpty()) {
+                this.totalFootnotesLength = ((Integer) ListUtil
+                        .getLast(this.lengthList)).intValue();
             } else {
-                totalFootnotesLength = 0;
+                this.totalFootnotesLength = 0;
             }
         }
         // update footnotesPending;
-        if (footnotesList.size() == 0) {
-            footnotesPending = false;
+        if (this.footnotesList.size() == 0) {
+            this.footnotesPending = false;
         }
     }
 
     /** {@inheritDoc} */
-    protected void considerLegalBreak(KnuthElement element, int elementIdx) {
+    @Override
+    protected void considerLegalBreak(final KnuthElement element,
+            final int elementIdx) {
         if (element.isPenalty()) {
-            int breakClass = ((KnuthPenalty) element).getBreakClass();
+            final int breakClass = ((KnuthPenalty) element).getBreakClass();
             switch (breakClass) {
             case Constants.EN_PAGE:
                 if (this.currentKeepContext != breakClass) {
@@ -428,35 +463,37 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
                 this.currentKeepContext = breakClass;
                 break;
             default:
-                //nop
+                // nop
             }
         }
         super.considerLegalBreak(element, elementIdx);
-        newFootnotes = false;
+        this.newFootnotes = false;
     }
 
     /** {@inheritDoc} */
-    protected boolean elementCanEndLine(KnuthElement element, int line, int difference) {
-        if (!(element.isPenalty()) || pageProvider == null) {
+    @Override
+    protected boolean elementCanEndLine(final KnuthElement element,
+            final int line, final int difference) {
+        if (!element.isPenalty() || this.pageProvider == null) {
             return true;
         } else {
-            KnuthPenalty p = (KnuthPenalty) element;
+            final KnuthPenalty p = (KnuthPenalty) element;
             if (p.getPenalty() <= 0) {
                 return true;
             } else {
-                int context = p.getBreakClass();
+                final int context = p.getBreakClass();
                 switch (context) {
                 case Constants.EN_LINE:
                 case Constants.EN_COLUMN:
-                    return p.getPenalty() < KnuthPenalty.INFINITE;
+                    return p.getPenalty() < KnuthElement.INFINITE;
                 case Constants.EN_PAGE:
-                    return p.getPenalty() < KnuthPenalty.INFINITE
-                            || !pageProvider.endPage(line - 1);
+                    return p.getPenalty() < KnuthElement.INFINITE
+                            || !this.pageProvider.endPage(line - 1);
                 case Constants.EN_AUTO:
                     log.debug("keep is not auto but context is");
                     return true;
                 default:
-                    if (p.getPenalty() < KnuthPenalty.INFINITE) {
+                    if (p.getPenalty() < KnuthElement.INFINITE) {
                         log.debug("Non recognized keep context:" + context);
                         return true;
                     } else {
@@ -468,56 +505,67 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
     }
 
     /** {@inheritDoc} */
-    protected int computeDifference(KnuthNode activeNode, KnuthElement element,
-                                    int elementIndex) {
-        KnuthPageNode pageNode = (KnuthPageNode) activeNode;
-        int actualWidth = totalWidth - pageNode.totalWidth;
+    @Override
+    protected int computeDifference(final KnuthNode activeNode,
+            final KnuthElement element, final int elementIndex) {
+        final KnuthPageNode pageNode = (KnuthPageNode) activeNode;
+        int actualWidth = this.totalWidth - pageNode.totalWidth;
         int footnoteSplit = 0;
         boolean canDeferOldFootnotes;
         if (element.isPenalty()) {
             actualWidth += element.getWidth();
         }
-        if (footnotesPending) {
+        if (this.footnotesPending) {
             // compute the total length of the footnotes not yet inserted
-            int allFootnotes = totalFootnotesLength - pageNode.totalFootnotes;
+            final int allFootnotes = this.totalFootnotesLength
+                    - pageNode.totalFootnotes;
             if (allFootnotes > 0) {
                 // this page contains some footnote citations
                 // add the footnote separator width
-                actualWidth += footnoteSeparatorLength.getOpt();
+                actualWidth += this.footnoteSeparatorLength.getOpt();
                 if (actualWidth + allFootnotes <= getLineWidth(activeNode.line)) {
                     // there is enough space to insert all footnotes:
                     // add the whole allFootnotes length
                     actualWidth += allFootnotes;
-                    insertedFootnotesLength = pageNode.totalFootnotes + allFootnotes;
-                    footnoteListIndex = footnotesList.size() - 1;
-                    footnoteElementIndex
-                        = getFootnoteList(footnoteListIndex).size() - 1;
-                } else if (((canDeferOldFootnotes
-                                = checkCanDeferOldFootnotes(pageNode, elementIndex))
-                            || newFootnotes)
-                           && (footnoteSplit = getFootnoteSplit(pageNode,
-                                   getLineWidth(activeNode.line) - actualWidth, canDeferOldFootnotes)) > 0) {
+                    this.insertedFootnotesLength = pageNode.totalFootnotes
+                            + allFootnotes;
+                    this.footnoteListIndex = this.footnotesList.size() - 1;
+                    this.footnoteElementIndex = getFootnoteList(
+                            this.footnoteListIndex).size() - 1;
+                } else if (((canDeferOldFootnotes = checkCanDeferOldFootnotes(
+                        pageNode, elementIndex)) || this.newFootnotes)
+                        && (footnoteSplit = getFootnoteSplit(pageNode,
+                                getLineWidth(activeNode.line) - actualWidth,
+                                canDeferOldFootnotes)) > 0) {
                     // it is allowed to break or even defer footnotes if either:
-                    //  - there are new footnotes in the last piece of content, and
-                    //    there is space to add at least a piece of the first one
-                    //  - or the previous page break deferred some footnote lines, and
-                    //    this is the first feasible break; in this case it is allowed
-                    //    to break and defer, if necessary, old and new footnotes
+                    // - there are new footnotes in the last piece of content,
+                    // and
+                    // there is space to add at least a piece of the first one
+                    // - or the previous page break deferred some footnote
+                    // lines, and
+                    // this is the first feasible break; in this case it is
+                    // allowed
+                    // to break and defer, if necessary, old and new footnotes
                     actualWidth += footnoteSplit;
-                    insertedFootnotesLength = pageNode.totalFootnotes + footnoteSplit;
+                    this.insertedFootnotesLength = pageNode.totalFootnotes
+                            + footnoteSplit;
                     // footnoteListIndex has been set in getFootnoteSplit()
                     // footnoteElementIndex has been set in getFootnoteSplit()
                 } else {
                     // there is no space to add the smallest piece of footnote,
-                    // or we are trying to add a piece of content with no footnotes and
-                    // it does not fit in the page, because of previous footnote bodies
+                    // or we are trying to add a piece of content with no
+                    // footnotes and
+                    // it does not fit in the page, because of previous footnote
+                    // bodies
                     // that cannot be broken:
-                    // add the whole allFootnotes length, so this breakpoint will be discarded
+                    // add the whole allFootnotes length, so this breakpoint
+                    // will be discarded
                     actualWidth += allFootnotes;
-                    insertedFootnotesLength = pageNode.totalFootnotes + allFootnotes;
-                    footnoteListIndex = footnotesList.size() - 1;
-                    footnoteElementIndex
-                        = getFootnoteList(footnoteListIndex).size() - 1;
+                    this.insertedFootnotesLength = pageNode.totalFootnotes
+                            + allFootnotes;
+                    this.footnoteListIndex = this.footnotesList.size() - 1;
+                    this.footnoteElementIndex = getFootnoteList(
+                            this.footnoteListIndex).size() - 1;
                 }
             } else {
                 // all footnotes have already been placed on previous pages
@@ -525,131 +573,156 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
         } else {
             // there are no footnotes
         }
-        int diff = getLineWidth(activeNode.line) - actualWidth;
-        if (autoHeight && diff < 0) {
-            //getLineWidth() for auto-height parts return 0 so the diff will be negative
-            return 0; //...but we don't want to shrink in this case. Stick to optimum.
+        final int diff = getLineWidth(activeNode.line) - actualWidth;
+        if (this.autoHeight && diff < 0) {
+            // getLineWidth() for auto-height parts return 0 so the diff will be
+            // negative
+            return 0; // ...but we don't want to shrink in this case. Stick to
+            // optimum.
         } else {
             return diff;
         }
     }
 
     /**
-     * Checks whether footnotes from preceding pages may be deferred to the page after
-     * the given element.
-     * @param node active node for the preceding page break
-     * @param contentElementIndex index of the Knuth element considered for the
-     * current page break
+     * Checks whether footnotes from preceding pages may be deferred to the page
+     * after the given element.
+     *
+     * @param node
+     *            active node for the preceding page break
+     * @param contentElementIndex
+     *            index of the Knuth element considered for the current page
+     *            break
      */
-    private boolean checkCanDeferOldFootnotes(KnuthPageNode node, int contentElementIndex) {
-        return (noBreakBetween(node.position, contentElementIndex)
+    private boolean checkCanDeferOldFootnotes(final KnuthPageNode node,
+            final int contentElementIndex) {
+        return noBreakBetween(node.position, contentElementIndex)
                 && deferredFootnotes(node.footnoteListIndex,
-                        node.footnoteElementIndex, node.totalFootnotes));
+                        node.footnoteElementIndex, node.totalFootnotes);
     }
 
     /**
-     * Returns true if there may be no breakpoint between the two given elements.
-     * @param prevBreakIndex index of the element from the currently considered active
-     * node
-     * @param breakIndex index of the currently considered breakpoint
+     * Returns true if there may be no breakpoint between the two given
+     * elements.
+     *
+     * @param prevBreakIndex
+     *            index of the element from the currently considered active node
+     * @param breakIndex
+     *            index of the currently considered breakpoint
      * @return true if no element between the two can be a breakpoint
      */
-    private boolean noBreakBetween(int prevBreakIndex, int breakIndex) {
-        // this method stores the parameters and the return value from previous calls
+    private boolean noBreakBetween(final int prevBreakIndex,
+            final int breakIndex) {
+        // this method stores the parameters and the return value from previous
+        // calls
         // in order to avoid scanning the element list unnecessarily:
-        //  - if there is no break between element #i and element #j
-        //    there will not be a break between #(i+h) and #j too
-        //  - if there is a break between element #i and element #j
-        //    there will be a break between #(i-h) and #(j+k) too
-        if (storedPrevBreakIndex != -1
-            && ((prevBreakIndex >= storedPrevBreakIndex
-                 && breakIndex == storedBreakIndex
-                 && storedValue)
-                || (prevBreakIndex <= storedPrevBreakIndex
-                    && breakIndex >= storedBreakIndex
-                    && !storedValue))) {
+        // - if there is no break between element #i and element #j
+        // there will not be a break between #(i+h) and #j too
+        // - if there is a break between element #i and element #j
+        // there will be a break between #(i-h) and #(j+k) too
+        if (this.storedPrevBreakIndex != -1
+                && (prevBreakIndex >= this.storedPrevBreakIndex
+                && breakIndex == this.storedBreakIndex
+                && this.storedValue || prevBreakIndex <= this.storedPrevBreakIndex
+                && breakIndex >= this.storedBreakIndex
+                && !this.storedValue)) {
             // use the stored value, do nothing
         } else {
             // compute the new value
             int index;
             // ignore suppressed elements
-            for (index = prevBreakIndex + 1;
-                    !par.getElement(index).isBox();
-                    index++) {
-                //nop
+            for (index = prevBreakIndex + 1; !this.par.getElement(index)
+                    .isBox(); index++) {
+                // nop
             }
             // find the next break
-            for (;
-                 index < breakIndex;
-                 index++) {
-                if (par.getElement(index).isGlue() && par.getElement(index - 1).isBox()
-                    || par.getElement(index).isPenalty()
-                       && ((KnuthElement) par.getElement(index)).getPenalty() < KnuthElement.INFINITE) {
+            for (; index < breakIndex; index++) {
+                if (this.par.getElement(index).isGlue()
+                        && this.par.getElement(index - 1).isBox()
+                        || this.par.getElement(index).isPenalty()
+                        && ((KnuthElement) this.par.getElement(index))
+                        .getPenalty() < KnuthElement.INFINITE) {
                     // break found
                     break;
                 }
             }
             // update stored parameters and value
-            storedPrevBreakIndex = prevBreakIndex;
-            storedBreakIndex = breakIndex;
-            storedValue = (index == breakIndex);
+            this.storedPrevBreakIndex = prevBreakIndex;
+            this.storedBreakIndex = breakIndex;
+            this.storedValue = index == breakIndex;
         }
-        return storedValue;
+        return this.storedValue;
     }
 
     /**
-     * Returns true if their are (pieces of) footnotes to be typeset on the current page.
-     * @param listIndex index of the last inserted footnote for the currently considered
-     * active node
-     * @param elementIndex index of the last element of the last inserted footnote
-     * @param length total length of all footnotes inserted so far
+     * Returns true if their are (pieces of) footnotes to be typeset on the
+     * current page.
+     *
+     * @param listIndex
+     *            index of the last inserted footnote for the currently
+     *            considered active node
+     * @param elementIndex
+     *            index of the last element of the last inserted footnote
+     * @param length
+     *            total length of all footnotes inserted so far
      */
-    private boolean deferredFootnotes(int listIndex, int elementIndex, int length) {
-        return ((newFootnotes
-                 && firstNewFootnoteIndex != 0
-                 && (listIndex < firstNewFootnoteIndex - 1
-                     || elementIndex < getFootnoteList(listIndex).size() - 1))
-                || length < totalFootnotesLength);
+    private boolean deferredFootnotes(final int listIndex,
+            final int elementIndex, final int length) {
+        return this.newFootnotes
+                && this.firstNewFootnoteIndex != 0
+                && (listIndex < this.firstNewFootnoteIndex - 1 || elementIndex < getFootnoteList(
+                        listIndex).size() - 1)
+                || length < this.totalFootnotesLength;
     }
 
     /**
      * Tries to split the flow of footnotes to put one part on the current page.
-     * @param activeNode currently considered previous page break
-     * @param availableLength available space for footnotes
+     *
+     * @param activeNode
+     *            currently considered previous page break
+     * @param availableLength
+     *            available space for footnotes
      * @param canDeferOldFootnotes
      * @return ...
      */
-    private int getFootnoteSplit(KnuthPageNode activeNode, int availableLength,
-                boolean canDeferOldFootnotes) {
+    private int getFootnoteSplit(final KnuthPageNode activeNode,
+            final int availableLength, final boolean canDeferOldFootnotes) {
         return getFootnoteSplit(activeNode.footnoteListIndex,
-                                activeNode.footnoteElementIndex,
-                                activeNode.totalFootnotes,
-                                availableLength, canDeferOldFootnotes);
+                activeNode.footnoteElementIndex, activeNode.totalFootnotes,
+                availableLength, canDeferOldFootnotes);
     }
 
     /**
      * Tries to split the flow of footnotes to put one part on the current page.
-     * @param prevListIndex index of the last footnote on the previous page
-     * @param prevElementIndex index of the last element of the last footnote
-     * @param prevLength total length of footnotes inserted so far
-     * @param availableLength available space for footnotes on this page
+     *
+     * @param prevListIndex
+     *            index of the last footnote on the previous page
+     * @param prevElementIndex
+     *            index of the last element of the last footnote
+     * @param prevLength
+     *            total length of footnotes inserted so far
+     * @param availableLength
+     *            available space for footnotes on this page
      * @param canDeferOldFootnotes
      * @return ...
      */
-    private int getFootnoteSplit(int prevListIndex, int prevElementIndex, int prevLength,
-                                 int availableLength, boolean canDeferOldFootnotes) {
+    private int getFootnoteSplit(final int prevListIndex,
+            final int prevElementIndex, final int prevLength,
+            final int availableLength, final boolean canDeferOldFootnotes) {
         if (availableLength <= 0) {
             return 0;
         } else {
             // the split should contain a piece of the last footnote
             // together with all previous, not yet inserted footnotes;
-            // but if this is not possible, try adding as much content as possible
+            // but if this is not possible, try adding as much content as
+            // possible
             int splitLength = 0;
             ListIterator noteListIterator = null;
             KnuthElement element = null;
             boolean somethingAdded = false;
 
-            // prevListIndex and prevElementIndex points to the last footnote element
+            // prevListIndex and prevElementIndex points to the last footnote
+            // element
             // already placed in a page: advance to the next element
             int listIndex = prevListIndex;
             int elementIndex = prevElementIndex;
@@ -661,30 +734,35 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
             }
 
             // try adding whole notes
-            if (footnotesList.size() - 1 > listIndex) {
-                // add the previous footnotes: these cannot be broken or deferred
-                if (!canDeferOldFootnotes && newFootnotes && firstNewFootnoteIndex > 0) {
-                    splitLength = ((Integer) lengthList.get(firstNewFootnoteIndex - 1)).intValue()
-                                  - prevLength;
-                    listIndex = firstNewFootnoteIndex;
+            if (this.footnotesList.size() - 1 > listIndex) {
+                // add the previous footnotes: these cannot be broken or
+                // deferred
+                if (!canDeferOldFootnotes && this.newFootnotes
+                        && this.firstNewFootnoteIndex > 0) {
+                    splitLength = ((Integer) this.lengthList
+                            .get(this.firstNewFootnoteIndex - 1)).intValue()
+                            - prevLength;
+                    listIndex = this.firstNewFootnoteIndex;
                     elementIndex = 0;
                 }
                 // try adding the new footnotes
-                while (((Integer) lengthList.get(listIndex)).intValue() - prevLength
-                       <= availableLength) {
-                    splitLength = ((Integer) lengthList.get(listIndex)).intValue()
-                                  - prevLength;
+                while (((Integer) this.lengthList.get(listIndex)).intValue()
+                        - prevLength <= availableLength) {
+                    splitLength = ((Integer) this.lengthList.get(listIndex))
+                            .intValue() - prevLength;
                     somethingAdded = true;
                     listIndex++;
                     elementIndex = 0;
                 }
                 // as this method is called only if it is not possible to insert
-                // all footnotes, at this point listIndex and elementIndex points to
+                // all footnotes, at this point listIndex and elementIndex
+                // points to
                 // an existing element, the next one we will try to insert
             }
 
             // try adding a split of the next note
-            noteListIterator = getFootnoteList(listIndex).listIterator(elementIndex);
+            noteListIterator = getFootnoteList(listIndex).listIterator(
+                    elementIndex);
 
             int prevSplitLength = 0;
             int prevIndex = -1;
@@ -700,9 +778,12 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
                 // get a sub-sequence from the note element list
                 boolean boxPreceding = false;
                 while (noteListIterator.hasNext()) {
-                    // as this method is called only if it is not possible to insert
-                    // all footnotes, and we have already tried (and failed) to insert
-                    // this whole footnote, the while loop will never reach the end
+                    // as this method is called only if it is not possible to
+                    // insert
+                    // all footnotes, and we have already tried (and failed) to
+                    // insert
+                    // this whole footnote, the while loop will never reach the
+                    // end
                     // of the note sequence
                     element = (KnuthElement) noteListIterator.next();
                     if (element.isBox()) {
@@ -729,35 +810,43 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
                 }
             }
 
-            // if prevSplitLength is 0, this means that the available length isn't enough
-            // to insert even the smallest split of the last footnote, so we cannot end a
+            // if prevSplitLength is 0, this means that the available length
+            // isn't enough
+            // to insert even the smallest split of the last footnote, so we
+            // cannot end a
             // page here
-            // if prevSplitLength is > 0 we can insert some footnote content in this page
+            // if prevSplitLength is > 0 we can insert some footnote content in
+            // this page
             // and insert the remaining in the following one
-            //TODO: check this conditional, as the first one is always false...?
+            // TODO: check this conditional, as the first one is always
+            // false...?
             if (!somethingAdded) {
-                // there was not enough space to add a piece of the first new footnote
+                // there was not enough space to add a piece of the first new
+                // footnote
                 // this is not a good break
                 prevSplitLength = 0;
             } else if (prevSplitLength > 0) {
                 // prevIndex is -1 if we have added only some whole footnotes
-                footnoteListIndex = (prevIndex != -1) ? listIndex : listIndex - 1;
-                footnoteElementIndex = (prevIndex != -1)
-                    ? prevIndex
-                    : getFootnoteList(footnoteListIndex).size() - 1;
+                this.footnoteListIndex = prevIndex != -1 ? listIndex
+                        : listIndex - 1;
+                this.footnoteElementIndex = prevIndex != -1 ? prevIndex
+                        : getFootnoteList(this.footnoteListIndex).size() - 1;
             }
             return prevSplitLength;
         }
     }
 
     /** {@inheritDoc} */
-    protected double computeAdjustmentRatio(KnuthNode activeNode, int difference) {
+    @Override
+    protected double computeAdjustmentRatio(final KnuthNode activeNode,
+            final int difference) {
         // compute the adjustment ratio
         if (difference > 0) {
-            int maxAdjustment = totalStretch - activeNode.totalStretch;
-            // add the footnote separator stretch if some footnote content will be added
-            if (((KnuthPageNode) activeNode).totalFootnotes < totalFootnotesLength) {
-                maxAdjustment += footnoteSeparatorLength.getStretch();
+            int maxAdjustment = this.totalStretch - activeNode.totalStretch;
+            // add the footnote separator stretch if some footnote content will
+            // be added
+            if (((KnuthPageNode) activeNode).totalFootnotes < this.totalFootnotesLength) {
+                maxAdjustment += this.footnoteSeparatorLength.getStretch();
             }
             if (maxAdjustment > 0) {
                 return (double) difference / maxAdjustment;
@@ -765,10 +854,11 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
                 return INFINITE_RATIO;
             }
         } else if (difference < 0) {
-            int maxAdjustment = totalShrink - activeNode.totalShrink;
-            // add the footnote separator shrink if some footnote content will be added
-            if (((KnuthPageNode) activeNode).totalFootnotes < totalFootnotesLength) {
-                maxAdjustment += footnoteSeparatorLength.getShrink();
+            int maxAdjustment = this.totalShrink - activeNode.totalShrink;
+            // add the footnote separator shrink if some footnote content will
+            // be added
+            if (((KnuthPageNode) activeNode).totalFootnotes < this.totalFootnotesLength) {
+                maxAdjustment += this.footnoteSeparatorLength.getShrink();
             }
             if (maxAdjustment > 0) {
                 return (double) difference / maxAdjustment;
@@ -781,14 +871,15 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
     }
 
     /** {@inheritDoc} */
-    protected double computeDemerits(KnuthNode activeNode, KnuthElement element,
-                                    int fitnessClass, double r) {
+    @Override
+    protected double computeDemerits(final KnuthNode activeNode,
+            final KnuthElement element, final int fitnessClass, final double r) {
         double demerits = 0;
         // compute demerits
         double f = Math.abs(r);
         f = 1 + 100 * f * f * f;
         if (element.isPenalty()) {
-            double penalty = element.getPenalty();
+            final double penalty = element.getPenalty();
             if (penalty >= 0) {
                 f += penalty;
                 demerits = f * f;
@@ -801,44 +892,46 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
             demerits = f * f;
         }
 
-        if (element.isPenalty() && ((KnuthPenalty) element).isPenaltyFlagged()
-            && getElement(activeNode.position).isPenalty()
-            && ((KnuthPenalty) getElement(activeNode.position)).isPenaltyFlagged()) {
+        if (element.isPenalty()
+                && ((KnuthPenalty) element).isPenaltyFlagged()
+                && getElement(activeNode.position).isPenalty()
+                && ((KnuthPenalty) getElement(activeNode.position))
+                .isPenaltyFlagged()) {
             // add demerit for consecutive breaks at flagged penalties
-            demerits += repeatedFlaggedDemerit;
+            demerits += this.repeatedFlaggedDemerit;
         }
         if (Math.abs(fitnessClass - activeNode.fitness) > 1) {
             // add demerit for consecutive breaks
             // with very different fitness classes
-            demerits += incompatibleFitnessDemerit;
+            demerits += this.incompatibleFitnessDemerit;
         }
 
-        if (footnotesPending) {
-            if (footnoteListIndex < footnotesList.size() - 1) {
+        if (this.footnotesPending) {
+            if (this.footnoteListIndex < this.footnotesList.size() - 1) {
                 // add demerits for the deferred footnotes
-                demerits += (footnotesList.size() - 1 - footnoteListIndex)
-                                * deferredFootnoteDemerits;
+                demerits += (this.footnotesList.size() - 1 - this.footnoteListIndex)
+                        * this.deferredFootnoteDemerits;
             }
-            if (footnoteListIndex < footnotesList.size()) {
-                if (footnoteElementIndex
-                        < getFootnoteList(footnoteListIndex).size() - 1) {
+            if (this.footnoteListIndex < this.footnotesList.size()) {
+                if (this.footnoteElementIndex < getFootnoteList(
+                        this.footnoteListIndex).size() - 1) {
                     // add demerits for the footnote split between pages
-                    demerits += splitFootnoteDemerits;
+                    demerits += this.splitFootnoteDemerits;
                 }
             } else {
-                //TODO Why can this happen in the first place? Does anybody know? See #44160
+                // TODO Why can this happen in the first place? Does anybody
+                // know? See #44160
             }
         }
         demerits += activeNode.totalDemerits;
         return demerits;
     }
 
+    @Override
     protected void finish() {
-        for (int i = startLine; i < endLine; i++) {
-            for (KnuthPageNode node = (KnuthPageNode) getNode(i);
-                 node != null;
-                 node = (KnuthPageNode) node.next) {
-                if (node.totalFootnotes < totalFootnotesLength) {
+        for (int i = this.startLine; i < this.endLine; i++) {
+            for (KnuthPageNode node = (KnuthPageNode) getNode(i); node != null; node = (KnuthPageNode) node.next) {
+                if (node.totalFootnotes < this.totalFootnotesLength) {
                     // layout remaining footnote bodies
                     createFootnotePages(node);
                 }
@@ -846,40 +939,41 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
         }
     }
 
-    private void createFootnotePages(KnuthPageNode lastNode) {
+    private void createFootnotePages(final KnuthPageNode lastNode) {
 
-        insertedFootnotesLength = lastNode.totalFootnotes;
-        footnoteListIndex = lastNode.footnoteListIndex;
-        footnoteElementIndex = lastNode.footnoteElementIndex;
+        this.insertedFootnotesLength = lastNode.totalFootnotes;
+        this.footnoteListIndex = lastNode.footnoteListIndex;
+        this.footnoteElementIndex = lastNode.footnoteElementIndex;
         int availableBPD = getLineWidth(lastNode.line);
         int split = 0;
         KnuthPageNode prevNode = lastNode;
 
         // create pages containing the remaining footnote bodies
-        while (insertedFootnotesLength < totalFootnotesLength) {
-            final int tmpLength = ((Integer) lengthList.get(footnoteListIndex)).intValue();
+        while (this.insertedFootnotesLength < this.totalFootnotesLength) {
+            final int tmpLength = ((Integer) this.lengthList
+                    .get(this.footnoteListIndex)).intValue();
             // try adding some more content
-            if ((tmpLength - insertedFootnotesLength) <= availableBPD) {
+            if (tmpLength - this.insertedFootnotesLength <= availableBPD) {
                 // add a whole footnote
-                availableBPD -= tmpLength - insertedFootnotesLength;
-                insertedFootnotesLength = tmpLength;
-                footnoteElementIndex
-                    = getFootnoteList(footnoteListIndex).size() - 1;
-            } else if ((split = getFootnoteSplit(footnoteListIndex, footnoteElementIndex,
-                    insertedFootnotesLength, availableBPD, true)) > 0) {
+                availableBPD -= tmpLength - this.insertedFootnotesLength;
+                this.insertedFootnotesLength = tmpLength;
+                this.footnoteElementIndex = getFootnoteList(
+                        this.footnoteListIndex).size() - 1;
+            } else if ((split = getFootnoteSplit(this.footnoteListIndex,
+                    this.footnoteElementIndex, this.insertedFootnotesLength,
+                    availableBPD, true)) > 0) {
                 // add a piece of a footnote
                 availableBPD -= split;
-                insertedFootnotesLength += split;
+                this.insertedFootnotesLength += split;
                 // footnoteListIndex has already been set in getFootnoteSplit()
-                // footnoteElementIndex has already been set in getFootnoteSplit()
+                // footnoteElementIndex has already been set in
+                // getFootnoteSplit()
             } else {
                 // cannot add any content: create a new node and start again
-                KnuthPageNode node = (KnuthPageNode)
-                                     createNode(lastNode.position, prevNode.line + 1, 1,
-                                                insertedFootnotesLength - prevNode.totalFootnotes,
-                                                0, 0,
-                                                0, 0, 0,
-                                                0, 0, prevNode);
+                final KnuthPageNode node = (KnuthPageNode) createNode(
+                        lastNode.position, prevNode.line + 1, 1,
+                        this.insertedFootnotesLength - prevNode.totalFootnotes,
+                        0, 0, 0, 0, 0, 0, 0, prevNode);
                 addNode(node.line, node);
                 removeNode(prevNode.line, prevNode);
 
@@ -888,71 +982,77 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
             }
         }
         // create the last node
-        KnuthPageNode node = (KnuthPageNode)
-                             createNode(lastNode.position, prevNode.line + 1, 1,
-                                        totalFootnotesLength - prevNode.totalFootnotes, 0, 0,
-                                        0, 0, 0,
-                                        0, 0, prevNode);
+        final KnuthPageNode node = (KnuthPageNode) createNode(
+                lastNode.position, prevNode.line + 1, 1,
+                this.totalFootnotesLength - prevNode.totalFootnotes, 0, 0, 0,
+                0, 0, 0, 0, prevNode);
         addNode(node.line, node);
         removeNode(prevNode.line, prevNode);
     }
 
     /**
-     * @return a list of {@link PageBreakPosition} elements
-     *          corresponding to the computed page- and column-breaks
+     * @return a list of {@link PageBreakPosition} elements corresponding to the
+     *         computed page- and column-breaks
      */
     public LinkedList getPageBreaks() {
-        return pageBreaks;
+        return this.pageBreaks;
     }
 
     /**
-     * Insert the given {@link PageBreakPosition} as the first
-     * element in the list of page-breaks
+     * Insert the given {@link PageBreakPosition} as the first element in the
+     * list of page-breaks
      *
-     * @param pageBreak the position to insert
+     * @param pageBreak
+     *            the position to insert
      */
-    public void insertPageBreakAsFirst(PageBreakPosition pageBreak) {
-        if (pageBreaks == null) {
-            pageBreaks = new LinkedList();
+    public void insertPageBreakAsFirst(final PageBreakPosition pageBreak) {
+        if (this.pageBreaks == null) {
+            this.pageBreaks = new LinkedList();
         }
-        pageBreaks.addFirst(pageBreak);
+        this.pageBreaks.addFirst(pageBreak);
     }
 
     /**
-     * Removes all page breaks from the result list. This is used by block-containers and
-     * static-content when it is only desired to know where there is an overflow but later the
-     * whole content should be painted as one part.
+     * Removes all page breaks from the result list. This is used by
+     * block-containers and static-content when it is only desired to know where
+     * there is an overflow but later the whole content should be painted as one
+     * part.
      */
     public void removeAllPageBreaks() {
-        if (pageBreaks == null) {
+        if (this.pageBreaks == null) {
             return;
         }
-        while (pageBreaks.size() > 1) {
-            pageBreaks.removeFirst();
+        while (this.pageBreaks.size() > 1) {
+            this.pageBreaks.removeFirst();
         }
     }
 
     /** {@inheritDoc} */
-    public void updateData1(int total, double demerits) {
+    @Override
+    public void updateData1(final int total, final double demerits) {
     }
 
     /** {@inheritDoc} */
-    public void updateData2(KnuthNode bestActiveNode,
-                            KnuthSequence sequence,
-                            int total) {
-        //int difference = (bestActiveNode.line < total)
-        //      ? bestActiveNode.difference : bestActiveNode.difference + fillerMinWidth;
+    @Override
+    public void updateData2(final KnuthNode bestActiveNode,
+            final KnuthSequence sequence, final int total) {
+        // int difference = (bestActiveNode.line < total)
+        // ? bestActiveNode.difference : bestActiveNode.difference +
+        // fillerMinWidth;
         int difference = bestActiveNode.difference;
         if (difference + bestActiveNode.availableShrink < 0) {
-            if (!autoHeight) {
-                if (layoutListener != null) {
-                    layoutListener.notifyOverflow(bestActiveNode.line - 1, -difference, getFObj());
+            if (!this.autoHeight) {
+                if (this.layoutListener != null) {
+                    this.layoutListener.notifyOverflow(bestActiveNode.line - 1,
+                            -difference, getFObj());
                 }
             }
         }
-        boolean isNonLastPage = (bestActiveNode.line < total);
-        int blockAlignment = isNonLastPage ? alignment : alignmentLast;
-        // it is always allowed to adjust space, so the ratio must be set regardless of
+        final boolean isNonLastPage = bestActiveNode.line < total;
+        final int blockAlignment = isNonLastPage ? this.alignment
+                : this.alignmentLast;
+        // it is always allowed to adjust space, so the ratio must be set
+        // regardless of
         // the value of the property display-align; the ratio must be <= 1
         double ratio = bestActiveNode.adjustRatio;
         if (ratio < 0) {
@@ -960,11 +1060,13 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
             // spaces always have enough shrink
             difference = 0;
         } else if (ratio <= 1 && isNonLastPage) {
-            // not-last page break with a positive difference smaller than the available stretch:
+            // not-last page break with a positive difference smaller than the
+            // available stretch:
             // spaces can stretch to fill the whole difference
             difference = 0;
         } else if (ratio > 1) {
-            // not-last page with a positive difference greater than the available stretch
+            // not-last page with a positive difference greater than the
+            // available stretch
             // spaces can stretch to fill the difference only partially
             ratio = 1;
             difference -= bestActiveNode.availableStretch;
@@ -974,14 +1076,15 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
             if (blockAlignment != Constants.EN_JUSTIFY) {
                 ratio = 0;
             } else {
-                //Stretch as much as possible on last page
+                // Stretch as much as possible on last page
                 difference = 0;
             }
         }
-        // compute the indexes of the first footnote list and the first element in that list
+        // compute the indexes of the first footnote list and the first element
+        // in that list
         int firstListIndex = ((KnuthPageNode) bestActiveNode.previous).footnoteListIndex;
         int firstElementIndex = ((KnuthPageNode) bestActiveNode.previous).footnoteElementIndex;
-        if (footnotesList != null
+        if (this.footnotesList != null
                 && firstElementIndex == getFootnoteList(firstListIndex).size() - 1) {
             // advance to the next list
             firstListIndex++;
@@ -997,25 +1100,26 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
                     + " position=" + bestActiveNode.position);
         }
         insertPageBreakAsFirst(new PageBreakPosition(this.topLevelLM,
-                bestActiveNode.position,
-                firstListIndex, firstElementIndex,
+                bestActiveNode.position, firstListIndex, firstElementIndex,
                 ((KnuthPageNode) bestActiveNode).footnoteListIndex,
-                ((KnuthPageNode) bestActiveNode).footnoteElementIndex,
-                ratio, difference));
+                ((KnuthPageNode) bestActiveNode).footnoteElementIndex, ratio,
+                difference));
     }
 
     /** {@inheritDoc} */
+    @Override
     protected int filterActiveNodes() {
         // leave only the active node with fewest total demerits
         KnuthNode bestActiveNode = null;
-        for (int i = startLine; i < endLine; i++) {
+        for (int i = this.startLine; i < this.endLine; i++) {
             for (KnuthNode node = getNode(i); node != null; node = node.next) {
-                if (favorSinglePart
+                if (this.favorSinglePart
                         && node.line > 1
                         && bestActiveNode != null
                         && Math.abs(bestActiveNode.difference) < bestActiveNode.availableShrink) {
-                    //favor current best node, so just skip the current node because it would
-                    //result in more than one part
+                    // favor current best node, so just skip the current node
+                    // because it would
+                    // result in more than one part
                 } else {
                     bestActiveNode = compareNodes(bestActiveNode, node);
                 }
@@ -1024,30 +1128,32 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
                 }
             }
         }
-        assert (bestActiveNode != null);
+        assert bestActiveNode != null;
         return bestActiveNode.line;
     }
 
     /**
      * Obtain the element-list corresponding to the footnote at the given index.
      *
-     * @param index the index in the list of footnotes
-     * @return  the element-list
+     * @param index
+     *            the index in the list of footnotes
+     * @return the element-list
      */
-    protected final List getFootnoteList(int index) {
-        return (List) footnotesList.get(index);
+    protected final List getFootnoteList(final int index) {
+        return (List) this.footnotesList.get(index);
     }
 
     /** @return the associated top-level formatting object. */
     public FObj getFObj() {
-        return topLevelLM.getFObj();
+        return this.topLevelLM.getFObj();
     }
 
     /** {@inheritDoc} */
-    protected int getLineWidth(int line) {
+    @Override
+    protected int getLineWidth(final int line) {
         int bpd;
-        if (pageProvider != null) {
-            bpd = pageProvider.getAvailableBPD(line);
+        if (this.pageProvider != null) {
+            bpd = this.pageProvider.getAvailableBPD(line);
         } else {
             bpd = super.getLineWidth(line);
         }
@@ -1064,22 +1170,28 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
 
         /**
          * Issued when an overflow is detected
-         * @param part the number of the part (page) this happens on
-         * @param amount the amount by which the area overflows (in mpt)
-         * @param obj the root FO object where this happens
+         *
+         * @param part
+         *            the number of the part (page) this happens on
+         * @param amount
+         *            the amount by which the area overflows (in mpt)
+         * @param obj
+         *            the root FO object where this happens
          */
-        void notifyOverflow(int part, int amount, FObj obj);
+        void notifyOverflow(final int part, final int amount, final FObj obj);
 
     }
 
     /** {@inheritDoc} */
+    @Override
     protected int getIPDdifference() {
-        return ipdDifference;
+        return this.ipdDifference;
     }
 
     /** {@inheritDoc} */
+    @Override
     protected int handleIpdChange() {
-        log.trace("Best node for ipd change:" + bestNodeForIPDChange);
+        log.trace("Best node for ipd change:" + this.bestNodeForIPDChange);
         // TODO finish()
         /*
          * The third parameter is used to determine if this is the last page, so
@@ -1088,46 +1200,52 @@ class PageBreakingAlgorithm extends BreakingAlgorithm {
          * different ipd. So tweak the parameter to fall into the non-last-page
          * case.
          */
-        calculateBreakPoints(bestNodeForIPDChange, par, bestNodeForIPDChange.line + 1);
-        activeLines = null;
-        return bestNodeForIPDChange.line;
+        calculateBreakPoints(this.bestNodeForIPDChange, this.par,
+                this.bestNodeForIPDChange.line + 1);
+        this.activeLines = null;
+        return this.bestNodeForIPDChange.line;
     }
 
     /**
-     * Add a node at the end of the given line's existing active nodes.
-     * If this is the first node in the line, adjust endLine accordingly.
-     * @param line number of the line ending at the node's corresponding breakpoint
-     * @param node the active node to add
+     * Add a node at the end of the given line's existing active nodes. If this
+     * is the first node in the line, adjust endLine accordingly.
+     *
+     * @param line
+     *            number of the line ending at the node's corresponding
+     *            breakpoint
+     * @param node
+     *            the active node to add
      */
-    protected void addNode(int line, KnuthNode node) {
-        if (node.position < par.size() - 1 && line > 0
-                && (ipdDifference = compareIPDs(line - 1)) != 0) {
+    @Override
+    protected void addNode(final int line, final KnuthNode node) {
+        if (node.position < this.par.size() - 1 && line > 0
+                && (this.ipdDifference = compareIPDs(line - 1)) != 0) {
             log.trace("IPD changes at page " + line);
-            if (bestNodeForIPDChange == null
-                    || node.totalDemerits < bestNodeForIPDChange.totalDemerits) {
-                bestNodeForIPDChange = node;
+            if (this.bestNodeForIPDChange == null
+                    || node.totalDemerits < this.bestNodeForIPDChange.totalDemerits) {
+                this.bestNodeForIPDChange = node;
             }
         } else {
-            if (node.position == par.size() - 1) {
+            if (node.position == this.par.size() - 1) {
                 /*
                  * The whole sequence could actually fit on the last page before
                  * the IPD change. No need to do any special handling.
                  */
-                ipdDifference = 0;
+                this.ipdDifference = 0;
             }
             super.addNode(line, node);
         }
     }
 
     KnuthNode getBestNodeBeforeIPDChange() {
-        return bestNodeForIPDChange;
+        return this.bestNodeForIPDChange;
     }
 
-    private int compareIPDs(int line) {
-        if (pageProvider == null) {
+    private int compareIPDs(final int line) {
+        if (this.pageProvider == null) {
             return 0;
         }
-        return pageProvider.compareIPDs(line);
+        return this.pageProvider.compareIPDs(line);
     }
 
 }
